# enigmistica

./: CMakeLists.txt
projects/: build_opk.sh
projects/msvc2017/: scheme.json
projects/msvc2017/Crosswords/: Enigmistica.sln  Enigmistica.vcxproj  Enigmistica.vcxproj.filters
projects/opendingux/: default.gcw0.desktop
src/: Common.h  main.cpp
src/games/: Chess.h  Crossword.h
src/games/board/: Board.h  Checkers.h  Chess.h
src/gfx/: KeyboardView.cpp  MainView.cpp  MainView.h  SdlHelper.h  ViewManager.cpp  ViewManager.h
src/gfx/views/: BoardGameRenderer.h  ChessView.cpp  CrosswordView.cpp
